We want riak+solr running

--- a/jmx-exporter.service
+++ b/jmx-exporter.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=JMX Prometheus Exporter
+Wants=riak.service
+After=riak.service
 Wants=network-online.target
 After=network-online.target
 
